Formatted Start and End Dates; end date hidden when only one episode due to redundancy (for single episode OVA or movie releases); fixed banner margin on mobile

--- a/styles/anime.css
+++ b/styles/anime.css
@@ -127,7 +127,7 @@ a {
 		width: 100vw;
 	}
 	#header_image {
-    	margin-bottom: -10px;
+    	margin-bottom: -6px;
 	}
 	#header_image img {
     	max-height: 150px;
